[package]
name = "scarab"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.41"
bitflags = "1.3.2"
lazy_static = "1.4.0"
phf = { version = "0.10.0", features = ["macros"] }
result-at = { path = "./result-at" }
thiserror = "1.0.25"

[dev-dependencies]
k9 = "0.11.0"

[workspace]
members = [
	".",
	"result-at"
]
